# ocsfkit

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
docs/: ci.md  demo.md  getting-started.md  index.md  install.md  mapping-catalog.md  mapping-guide.md  real-world-workflows.md
examples/: aws-vpc-flow-mapping.yaml  azure-activity-mapping.yaml  azure-ad-signin-mapping.yaml  cloudflare-log-mapping.yaml  cloudtrail-console-login-mapping.yaml  crowdstrike-detection-mapping.yaml  custom_transforms.py  defender-alert-mapping.yaml  gcp-scc-finding-mapping.yaml  github-audit-mapping.yaml  google-cloud-audit-mapping.yaml  guardduty-mapping.yaml  kubernetes-audit-mapping.yaml  lacework-alert-mapping.yaml  okta-authentication-mapping.yaml  paloalto-traffic-mapping.yaml  securityhub-mapping.yaml  sentinel-alert-mapping.yaml  splunk-notable-mapping.yaml  sysmon-process-mapping.yaml  windows-security-auth-mapping.yaml  wiz-finding-mapping.yaml  zeek-conn-mapping.yaml
fixtures/: aws_guardduty_finding.json  aws_securityhub_finding.json  aws_vpc_flow_log.json  azure_activity_log.json  azure_ad_signin.json  broken_ocsf_event.json  cloudflare_log.json  cloudtrail_event.json  crowdstrike_detection.json  defender_alert.json  gcp_scc_finding.json  github_audit_event.json  google_cloud_audit_log.json  guardduty.ndjson  kubernetes_audit.json  lacework_alert.json  ocsf_detection_finding.json  okta_login_event.json  paloalto_traffic.json  sentinel_alert.json  (+5 more)
(+109 files in other folders)
